k8s/s3-lan-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: skirmshop-drive-s3-lan
  annotations:
    external-dns.alpha.kubernetes.io/hostname: skirmshop-s3.lan.e-dani.com,skirmshop-s3-console.lan.e-dani.com
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`skirmshop-s3.lan.e-dani.com`) && (ClientIP(`192.168.50.0/24`) || ClientIP(`100.64.0.0/10`) || ClientIP(`10.42.0.0/16`) || ClientIP(`10.43.0.0/16`))
      services:
        - name: skirmshop-drive-s3
          port: 9000
    - kind: Rule
      match: Host(`skirmshop-s3-console.lan.e-dani.com`) && (ClientIP(`192.168.50.0/24`) || ClientIP(`100.64.0.0/10`) || ClientIP(`10.42.0.0/16`) || ClientIP(`10.43.0.0/16`))
      services:
        - name: skirmshop-drive-s3
          port: 9001
  tls:
    store:
      name: default
      namespace: traefik-lan
